new changes for policy page

--- a/privacy-policy-3rd.html
+++ b/privacy-policy-3rd.html
@@ -87,9 +87,9 @@
 
                 <li class="pushy-link">
                     <a href="#">
-                        <div class="menu-img active devices-icon">
+                        <div class="menu-img  devices-icon">
                         </div>
-                        <div class="active-menu-text">
+                        <div>
                             Devices
                         </div>
                     </a>
@@ -105,9 +105,9 @@
                 </li>
                 <li class="pushy-link">
                     <a href="#">
-                        <div class="menu-img policy-icon">
+                        <div class="menu-img active policy-icon">
                         </div>
-                        <div>
+                        <div class="active-menu-text">
                             Policy Center
                         </div>
                     </a>
@@ -211,10 +211,10 @@
 
                     </li>
                     <li>
-                        <div class="menu-img  active devices-icon">
+                        <div class="menu-img   devices-icon">
 
                         </div>
-                        <a href="#" class="active-menu-text">Devices</a>
+                        <a href="#">Devices</a>
 
                         <ul class="header-submenu">
                             <li><a href="#">SubMenu 2</a></li>
@@ -237,10 +237,10 @@
                         </ul>
                     </li>
                     <li>
-                        <div class="menu-img policy-icon">
+                        <div class="menu-img active policy-icon">
 
                         </div>
-                        <a href="#">Policy Center</a>
+                        <a href="#" class="active-menu-text">Policy Center</a>
                         <ul class="header-submenu">
                             <li><a href="#">SubMenu 2</a></li>
                             <li><a href="#">SubMenu 3</a></li>
@@ -410,8 +410,8 @@
                                             <input type="text" placeholder="" class="search-field">
 
                                             <!-- <a href="#" class="search-query-dropdown-btn">
-                        <img src="images/down-arrow.svg">
-                      </a> -->
+<img src="images/down-arrow.svg">
+</a> -->
 
                                         </div>
                                     </div>
@@ -449,8 +449,9 @@
                                                                 <li>
                                                                     <span class="active-btn sucess-active">MAIN
                                                                         <img src="images/success-icon.png"
-                                                                            alt="Success Icon" </span> </li> <li>
-                                                                        <span>PASS</span>
+                                                                            alt="Success Icon" /></span> </li>
+                                                                <li>
+                                                                    <span class="three-level-active-btn">PASS</span>
                                                                 </li>
                                                                 <li>
                                                                     <span>FAIL</span>
@@ -472,12 +473,12 @@
                                                                         <div
                                                                             class="search-wrap-standard search-inverse">
                                                                             <input type="text"
-                                                                                placeholder="Search Installed Hardware"
+                                                                                placeholder="Search Action Library"
                                                                                 class="search-field">
 
                                                                             <!-- <a href="#" class="search-query-dropdown-btn">
-                                        <img src="images/down-arrow.svg">
-                                      </a> -->
+                <img src="images/down-arrow.svg">
+                </a> -->
 
                                                                         </div>
                                                                     </div>
@@ -486,14 +487,14 @@
 
                                                                     <!-- <div class="tab-inner-expand-collapse-row">
 
-                                    <div class="expand-collapse-row-btns">
-                                      <a href="#" data-toggle="modal" data-target="#query-wizard-modal">Expand all</a>
-                                      <span class="split-pipe">|</span>
-                                      <a href="#" data-toggle="modal" data-target="#exampleModal">Collapse all</a>
-                                    </div>
+            <div class="expand-collapse-row-btns">
+                <a href="#" data-toggle="modal" data-target="#query-wizard-modal">Expand all</a>
+                <span class="split-pipe">|</span>
+                <a href="#" data-toggle="modal" data-target="#exampleModal">Collapse all</a>
+            </div>
 
 
-                                  </div> -->
+            </div> -->
 
                                                                     <div
                                                                         class="row mt-4 mb-4 policy-accordions-wrapper">
@@ -1242,158 +1243,158 @@
 
 
                                                                 <!-- 
-                                <div class="nav-link accordion p-0" id="v-pills-home-tab" data-toggle="pill"
-                                  href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">
+        <div class="nav-link accordion p-0" id="v-pills-home-tab" data-toggle="pill"
+            href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">
 
 
-                                  <div class="tabs-sidemenu-accord-container">
-                                    <button>
-                                      Network Cards
-                                    </button>
-                                  </div>
+            <div class="tabs-sidemenu-accord-container">
+            <button>
+                Network Cards
+            </button>
+            </div>
 
-                                </div>
-
-
-                                <div class="nav-link accordion p-0" id="v-pills-home-tab" data-toggle="pill"
-                                  href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">
+        </div>
 
 
-                                  <div class="tabs-sidemenu-accord-container">
-                                    <button>
-                                      Software Details
-                                    </button>
-                                  </div>
-
-                                </div>
+        <div class="nav-link accordion p-0" id="v-pills-home-tab" data-toggle="pill"
+            href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">
 
 
+            <div class="tabs-sidemenu-accord-container">
+            <button>
+                Software Details
+            </button>
+            </div>
 
-                                <div class="nav-link accordion p-0" id="v-pills-home-tab" data-toggle="pill"
-                                  href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">
-
-
-                                  <div class="tabs-sidemenu-accord-container">
-                                    <button>
-                                      Security and Compliance
-                                    </button>
-                                  </div>
-
-                                </div>
+        </div>
 
 
-                                <div class="nav-link accordion p-0" id="v-pills-home-tab" data-toggle="pill"
-                                  href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">
+
+        <div class="nav-link accordion p-0" id="v-pills-home-tab" data-toggle="pill"
+            href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">
 
 
-                                  <div class="tabs-sidemenu-accord-container">
-                                    <button>
-                                      Agent Info
-                                    </button>
-                                  </div>
+            <div class="tabs-sidemenu-accord-container">
+            <button>
+                Security and Compliance
+            </button>
+            </div>
 
-                                </div> -->
+        </div>
+
+
+        <div class="nav-link accordion p-0" id="v-pills-home-tab" data-toggle="pill"
+            href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">
+
+
+            <div class="tabs-sidemenu-accord-container">
+            <button>
+                Agent Info
+            </button>
+            </div>
+
+        </div> -->
 
 
                                                                 <!-- <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
-                                  href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
-                                  aria-selected="false">
-                                  <div>
-                                    Local Admins
-                                  </div>
+            href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
+            aria-selected="false">
+            <div>
+            Local Admins
+            </div>
 
-                                  <div>
+            <div>
 
-                                  </div>
-
-
-                                </a>
+            </div>
 
 
-
-
-                                <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home"
-                                  role="tab" aria-controls="v-pills-home" aria-selected="true">
-
-                                  <div>
-                                    Agent Versions
-                                  </div>
-                                  <div>
-
-                                  </div>
-
-                                </a>
-
-
-                                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile"
-                                  role="tab" aria-controls="v-pills-profile" aria-selected="false">
-                                  <div>
-                                    Hard Drives
-                                  </div>
-                                  <div>
-
-                                  </div>
+        </a>
 
 
 
-                                </a>
+
+        <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home"
+            role="tab" aria-controls="v-pills-home" aria-selected="true">
+
+            <div>
+            Agent Versions
+            </div>
+            <div>
+
+            </div>
+
+        </a>
 
 
-                                <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
-                                  href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
-                                  aria-selected="false">
-                                  <div>
-                                    Running Processes
-                                  </div>
-                                  <div>
+        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile"
+            role="tab" aria-controls="v-pills-profile" aria-selected="false">
+            <div>
+            Hard Drives
+            </div>
+            <div>
 
-                                  </div>
-
-
-
-                                </a>
-
-
-                                <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
-                                  href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
-                                  aria-selected="false">
-                                  <div>
-                                    Services
-                                  </div>
-                                  <div>
-
-                                  </div>
+            </div>
 
 
 
-                                </a>
+        </a>
 
 
-                                <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home"
-                                  role="tab" aria-controls="v-pills-home" aria-selected="true">
+        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
+            href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
+            aria-selected="false">
+            <div>
+            Running Processes
+            </div>
+            <div>
 
-                                  <div>
-                                    Shares
-                                  </div>
-                                  <div>
-
-                                  </div>
-
-                                </a>
-
-
-                                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile"
-                                  role="tab" aria-controls="v-pills-profile" aria-selected="false">
-                                  <div>
-                                    Firewall Rules
-                                  </div>
-                                  <div>
-
-                                  </div>
+            </div>
 
 
 
-                                </a> -->
+        </a>
+
+
+        <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
+            href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
+            aria-selected="false">
+            <div>
+            Services
+            </div>
+            <div>
+
+            </div>
+
+
+
+        </a>
+
+
+        <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home"
+            role="tab" aria-controls="v-pills-home" aria-selected="true">
+
+            <div>
+            Shares
+            </div>
+            <div>
+
+            </div>
+
+        </a>
+
+
+        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile"
+            role="tab" aria-controls="v-pills-profile" aria-selected="false">
+            <div>
+            Firewall Rules
+            </div>
+            <div>
+
+            </div>
+
+
+
+        </a> -->
 
 
 
@@ -1419,7 +1420,7 @@
                                                                     <div
                                                                         class="search-wrap-standard search-inverse mb-4">
                                                                         <input type="text"
-                                                                            placeholder="Search Installed Hardware"
+                                                                            placeholder="Search Action Library"
                                                                             class="search-field">
 
                                                                         <a href="#" class="search-query-dropdown-btn">
@@ -1434,14 +1435,14 @@
                                                                         <div class="device-results">
                                                                             Hardware Installed (120)
                                                                             <!-- <a href="#">                            
-                                           <img src="images/vertical-dots.svg">
-                                          </a> -->
+                    <img src="images/vertical-dots.svg">
+                    </a> -->
                                                                         </div>
 
 
                                                                         <div class="edit-column-export">
                                                                             <!-- <a href="#">Edit Column</a>
-                                          <span class="split-pipe">|</span> -->
+                    <span class="split-pipe">|</span> -->
                                                                             <a href="#">Export CSV</a>
                                                                         </div>
 
