--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -87,9 +87,9 @@
 
         <li class="pushy-link">
           <a href="#">
-            <div class="menu-img active devices-icon">
+            <div class="menu-img devices-icon">
             </div>
-            <div class="active-menu-text">
+            <div>
               Devices
             </div>
           </a>
@@ -105,9 +105,9 @@
         </li>
         <li class="pushy-link">
           <a href="#">
-            <div class="menu-img policy-icon">
+            <div class="menu-img active policy-icon">
             </div>
-            <div>
+            <div class="active-menu-text">
               Policy Center
             </div>
           </a>
@@ -211,10 +211,10 @@
 
           </li>
           <li>
-            <div class="menu-img  active devices-icon">
+            <div class="menu-img devices-icon">
 
             </div>
-            <a href="#" class="active-menu-text">Devices</a>
+            <a href="#">Devices</a>
 
             <ul class="header-submenu">
               <li><a href="#">SubMenu 2</a></li>
@@ -237,10 +237,10 @@
             </ul>
           </li>
           <li>
-            <div class="menu-img policy-icon">
+            <div class="menu-img active policy-icon">
 
             </div>
-            <a href="#">Policy Center</a>
+            <a href="#" class="active-menu-text">Policy Center</a>
             <ul class="header-submenu">
               <li><a href="#">SubMenu 2</a></li>
               <li><a href="#">SubMenu 3</a></li>
