policy center button changes

--- a/all-links.html
+++ b/all-links.html
@@ -76,19 +76,19 @@
                     <br />
                     <br />
                     <p>
-                      <a href="privacy-policy.html" target="_blank">Privacy Policy</a>
+                      <a href="policy-center-1.html" target="_blank">Policy Center 1</a>
                     </p>
                     <br />
                     <br />
                     <br />
                     <p>
-                      <a href="privacy-policy-2nd.html" target="_blank">Privacy Policy 2 level</a>
+                      <a href="policy-center-2.html" target="_blank">Policy Center 2</a>
                     </p>
                     <br />
                     <br />
                     <br />
                     <p>
-                      <a href="privacy-policy-3rd.html" target="_blank">Privacy Policy 3 level</a>
+                      <a href="policy-center-3.html" target="_blank">Policy Center 3</a>
                     </p>
                   </div>
                 </div>
