--- a/policy-center-1.html
+++ b/policy-center-1.html
@@ -467,7 +467,7 @@
 
                                   <div class="full-search-row">
                                     <div class="search-wrap-standard search-inverse">
-                                      <input type="text" placeholder="Search Installed Hardware" class="search-field">
+                                      <input type="text" placeholder="Search Action Library" class="search-field">
 
                                       <!-- <a href="#" class="search-query-dropdown-btn">
                                         <img src="images/down-arrow.svg">
@@ -2732,9 +2732,6 @@
       ps.update();
     });
   </script>
-
-
-
 
 
 </body>
