--- a/policy-center-2.html
+++ b/policy-center-2.html
@@ -472,7 +472,7 @@
                                                                         <div
                                                                             class="search-wrap-standard search-inverse">
                                                                             <input type="text"
-                                                                                placeholder="Search Installed Hardware"
+                                                                                placeholder="Search Action Library"
                                                                                 class="search-field">
 
                                                                             <!-- <a href="#" class="search-query-dropdown-btn">
