toggle btn new html

--- a/query-wiard-expressions-model.html
+++ b/query-wiard-expressions-model.html
@@ -215,10 +215,22 @@
                           <li>
                             <span>
                               <div class="query-toggle-btn-div">
+                                <!--and or btn-->
+                                <label class="switch-btn">
+                                  <input type="checkbox" id="togBtn">
+                                  <div class="sliderss round">
+                                    <!--ADDED HTML -->
+                                    <div class="on">AND</div>
+                                    <div class="off">OR</div>
+                                    <!--END-->
+                                  </div>
+                                </label>
+                              </div>
+                              <!-- <div class="query-toggle-btn-div">
                                 <div class="togleBtn">
                                   AND <span>OR</span>
                                 </div>
-                              </div>
+                              </div> -->
                             </span>
                           </li>
                           <li>
@@ -343,7 +355,7 @@
                     </div>
 
                     <!--rule btn row-->
-                    <div class="query-wizard-expension mb-1 mt-4">
+                    <div class="query-wizard-expension mb-1 m-top">
                       <div class="query-wizard-exp-btn">
                         <a href="#" class="rule-btn">
                           <span>+</span>
@@ -359,7 +371,19 @@
 
                   <div class="and-or-div">
                     <div class="query-toggle-btn-div">
-                      <div class="togleBtn">AND <span>OR</span></div>
+                      <div>
+                        <!--and or btn-->
+                        <label class="switch-btn">
+                          <input type="checkbox" id="togBtn">
+                          <div class="sliderss round">
+                            <!--ADDED HTML -->
+                            <div class="on">AND</div>
+                            <div class="off">OR</div>
+                            <!--END-->
+                          </div>
+                        </label>
+                      </div>
+                      <!-- <div class="togleBtn">AND <span>OR</span></div> -->
                     </div>
                   </div>
                   <div class="query-wizard-exp-contents">
