wizard model changes

--- a/query-wiard-expressions-model.html
+++ b/query-wiard-expressions-model.html
@@ -209,7 +209,7 @@
                       </div>
                     </div>
 
-                    <div class="query-wizard-expension" style="z-index: 0;">
+                    <div class="query-wizard-expension" style="z-index: 4;">
                       <div class="add-fields-wrappter">
                         <ul class="list-ic horizontal">
                           <li>
@@ -355,7 +355,7 @@
                     </div>
 
                     <!--rule btn row-->
-                    <div class="query-wizard-expension mb-1 m-top">
+                    <div class="query-wizard-expension mb-1 mt-4 ">
                       <div class="query-wizard-exp-btn">
                         <a href="#" class="rule-btn">
                           <span>+</span>
