--- a/query-wiard-expressions-model.html
+++ b/query-wiard-expressions-model.html
@@ -359,11 +359,11 @@
                       <div class="query-wizard-exp-btn">
                         <a href="#" class="rule-btn">
                           <span>+</span>
-                          &nbsp;&nbsp; Rule
+                          &nbsp; Rule
                         </a>
                         <a href="#">
                           <span>+</span>
-                          &nbsp;&nbsp;Stamenets Group
+                          &nbsp;Statements Group
                         </a>
                       </div>
                     </div>
@@ -525,11 +525,11 @@
                       <div class="query-wizard-exp-btn">
                         <a href="#" class="rule-btn">
                           <span>+</span>
-                          &nbsp;&nbsp; Rule
+                          &nbsp; Rule
                         </a>
                         <a href="#">
                           <span>+</span>
-                          &nbsp;&nbsp;Stamenets Group
+                          &nbsp;Statements Group
                         </a>
                       </div>
                     </div>
@@ -540,10 +540,10 @@
                     <div class="query-wizard-bottom-btns">
                       <button type="button" class="theme-btn">Save</button>
                     </div>
-                    &nbsp;
+                    <!-- &nbsp;
                     <div class="query-toggle-btn-div">
                       <div class="togleBtnDisable"><span>AND</span> OR</div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
