--- a/query-wiard-expressions-model.html
+++ b/query-wiard-expressions-model.html
@@ -90,9 +90,22 @@
                           </li>
                           <li>
                             <span>
-                              <div class="disabled-input query-wizard-div-box">
-                                NOT
+
+                              <div>
+                                <!--and or btn-->
+                                <label class="switch-Not">
+                                  <input type="checkbox" id="togBtn">
+                                  <div class="sliders-Not round">
+                                    <!--ADDED HTML -->
+                                    <div class="not-white-bg">NOT</div>
+                                    <div class="not-blue-bg">NOT</div>
+                                    <!--END-->
+                                  </div>
+                                </label>
                               </div>
+                              <!-- <div class="disabled-input query-wizard-div-box">
+                                NOT
+                              </div> -->
                             </span>
                           </li>
                           <li>
@@ -235,8 +248,17 @@
                           </li>
                           <li>
                             <span>
-                              <div class="disabled-input query-wizard-div-box">
-                                NOT
+                              <div>
+                                <!--and or btn-->
+                                <label class="switch-Not">
+                                  <input type="checkbox" id="togBtn">
+                                  <div class="sliders-Not round">
+                                    <!--ADDED HTML -->
+                                    <div class="not-white-bg">NOT</div>
+                                    <div class="not-blue-bg">NOT</div>
+                                    <!--END-->
+                                  </div>
+                                </label>
                               </div>
                             </span>
                           </li>
@@ -401,8 +423,19 @@
                           </li>
                           <li>
                             <span>
-                              <div class="disabled-input query-wizard-div-box">
-                                NOT
+
+
+                              <div>
+                                <!--and or btn-->
+                                <label class="switch-Not">
+                                  <input type="checkbox" id="togBtn">
+                                  <div class="sliders-Not round">
+                                    <!--ADDED HTML -->
+                                    <div class="not-white-bg">NOT</div>
+                                    <div class="not-blue-bg">NOT</div>
+                                    <!--END-->
+                                  </div>
+                                </label>
                               </div>
                             </span>
                           </li>
