all link page update

--- a/all-links.html
+++ b/all-links.html
@@ -90,6 +90,24 @@
                     <p>
                       <a href="policy-center-3.html" target="_blank">Policy Center 3</a>
                     </p>
+                    <br />
+                    <br />
+                    <br />
+                    <p>
+                      <a href="policy-center.html" target="_blank">Policy Center 3</a>
+                    </p>
+                    <br />
+                    <br />
+                    <br />
+                    <p>
+                      <a href="save-queries.html" target="_blank">Policy Center 3</a>
+                    </p>
+                    <br />
+                    <br />
+                    <br />
+                    <p>
+                      <a href="policy-center-tasks.html" target="_blank">Policy Center 3</a>
+                    </p>
                   </div>
                 </div>
 
