all link pages name updated

--- a/all-links.html
+++ b/all-links.html
@@ -94,19 +94,19 @@
                     <br />
                     <br />
                     <p>
-                      <a href="policy-center.html" target="_blank">Policy Center 3</a>
+                      <a href="policy-center.html" target="_blank">Policy Center</a>
                     </p>
                     <br />
                     <br />
                     <br />
                     <p>
-                      <a href="save-queries.html" target="_blank">Policy Center 3</a>
+                      <a href="save-queries.html" target="_blank">Save Queries</a>
                     </p>
                     <br />
                     <br />
                     <br />
                     <p>
-                      <a href="policy-center-tasks.html" target="_blank">Policy Center 3</a>
+                      <a href="policy-center-tasks.html" target="_blank">Policy Center Tasks</a>
                     </p>
                   </div>
                 </div>
