--- a/all-links.html
+++ b/all-links.html
@@ -75,6 +75,17 @@
                     <br />
                     <br />
                     <br />
+
+                  </div>
+                </div>
+
+                <div style="margin-right: 30px;">
+                  <h1>pages Links</h1>
+                  <div class="links-model">
+
+                    <br />
+                    <br />
+                    <br />
                     <p>
                       <a href="policy-center-1.html" target="_blank">Policy Center 1</a>
                     </p>
