--- a/policy-center.html
+++ b/policy-center.html
@@ -318,7 +318,7 @@
                                 <div class="Connectors-top-searchbar-div">
 
                                     <div class=" search-wrap">
-                                        <input type="text" placeholder="Search Connectors" class="search-field">
+                                        <input type="text" placeholder="Enter Search Term" class="search-field">
 
                                         <!-- <a href="#" class="search-query-dropdown-btn">
                                         <img src="images/down-arrow.svg">
@@ -327,8 +327,8 @@
                                     </div>
 
                                     <div class="device-select-div">
-                                        <select name="" id="">
-                                            <option>Name</option>
+                                        <select name="" id="" class="theme-select">
+                                            <option>Filter By</option>
                                             <option>Tag</option>
                                             <option>Last Executed</option>
                                             <option>Updated By </option>
@@ -345,7 +345,7 @@
 
 
                                 </div>
-                                <div class="add-edit-connection-heading-row">
+                                <div class="add-edit-connection-heading-row mt-5">
                                     <div class="add-edit-heading"><strong>Policy Sets</strong> (20)</div>
                                     <div class="add-edit-connection-btns">
                                         <!-- <a href="#">Advanced Settings</a> -->
@@ -364,7 +364,7 @@
                                 </div>
 
                                 <div class="row m-0">
-                                    <div class="col-lg-12 inner-tab-right-section p-0">
+                                    <div class="col-lg-12 inner-tab-right-section p-0 mt-0">
                                         <div class="grid-table-flow">
                                             <div class="table-full-scroll">
                                                 <div class="wrapper">
