changes search bar section

--- a/policy-center-tasks.html
+++ b/policy-center-tasks.html
@@ -326,20 +326,22 @@
 
                                     </div>
 
-                                    <div class="device-select-div">
-                                        <select name="" id="" class="theme-select">
-                                            <option>Filter By</option>
-                                            <option>Tag</option>
-                                            <option>Last Executed</option>
-                                            <option>Updated By </option>
+                                    <div class="search-right-bar">
+                                        <div class="device-select-div">
+                                            <select name="" id="" class="theme-select">
+                                                <option>Filter By</option>
+                                                <option>Tag</option>
+                                                <option>Last Executed</option>
+                                                <option>Updated By </option>
 
-                                        </select>
-                                    </div>
+                                            </select>
+                                        </div>
 
-                                    <div>
-                                        <button type="button" class="theme-button-small graydient-primary-btn">
-                                            Search
-                                        </button>
+                                        <div>
+                                            <button type="button" class="theme-button-small graydient-primary-btn">
+                                                Search
+                                            </button>
+                                        </div>
                                     </div>
 
 
